# LT-Comment

./: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py  process.py  sending.py  twitter.py  websocket_connection.py
src/cogs/: events.py
