[tool.poetry]
name = "lt-comment"
version = "0.1.0"
description = ""
authors = ["Growthers"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.19.2"
websocket-client = "^1.3.1"
"discord.py" = "^1.7.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
